# smacircle-s1-revival

./: .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  README.md
.github/workflows/: android.yml  windows.yml
ble_client/: protocol.py  ride.py  scan.py
ble_client/examples/: unlock.py
qt_app/: CMakeLists.txt  Main.qml  app.rc  blecontroller.cpp  blecontroller.h  build-demo.bat  build.bat  deploy.bat  main.cpp  protocol.h  run.bat
qt_app/android/: AndroidManifest.xml
